--- a/desafio2_2.ipynb
+++ b/desafio2_2.ipynb
@@ -84,7 +84,7 @@
         "\n",
         "while contador_rep < 30: #Enquanto o contador for menor que 30 a repetição ira continuar\n",
         "\n",
-        "  nota = float(input(\"Digite sua nota: 767\")) #Recebendo o input do cliente/aluno\n",
+        "  nota = float(input(\"Digite sua nota: \")) #Recebendo o input do cliente/aluno\n",
         "\n",
         "  soma_das_notas += nota #Nessa variavel toda nota sera somada e acumulada\n",
         "\n",
